--- a/now.yml
+++ b/now.yml
@@ -7,4 +7,4 @@ columns:
 query:
   - operational_status: = 1
     fqdn: ISNOTEMPTY
-    manufacturer: STARTSWITH Lenovo
+    #manufacturer: STARTSWITH Lenovo
